Add helpful comments in code

--- a/AnimalClustering.ipynb
+++ b/AnimalClustering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "0c80b90f-cd8e-46fe-b09f-8dbce4b9d56b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "ed3650c0-28c8-49eb-b128-a8b6403411c5",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "4  OBS005   dogs  Many families around the world keep them as pe..."
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "e5b59568-eccd-4bd8-900a-564c78926521",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "9bdce411-b5aa-4c1c-afeb-941c87c7dd40",
    "metadata": {},
    "outputs": [
@@ -195,35 +195,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\irisa\\miniconda3\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Batches:   0%|                                                                                   | 0/1 [00:00<?, ?it/s]C:\\Users\\irisa\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
       "  return forward_call(*args, **kwargs)\n",
-      "Batches: 100%|███████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.74it/s]\n"
+      "Batches: 100%|███████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.97it/s]\n"
      ]
-    }
-   ],
-   "source": [
-    "# Cluster ambiguous questions\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "# 1. Convert questions to a list\n",
-    "questions = df['question'].tolist()\n",
-    "\n",
-    "# 2. Convert to embeddings using SBERT\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "embeddings = model.encode(questions, show_progress_bar=True)\n",
-    "\n",
-    "# 3. Apply KMeans clustering\n",
-    "kmeans = KMeans(n_clusters=4, random_state=42)\n",
-    "df['ambig_cluster'] = kmeans.fit_predict(embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "6d952c71-4a70-4df2-9f0a-b016f2def935",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -250,8 +228,6 @@
        "      <th>paragraph</th>\n",
        "      <th>question</th>\n",
        "      <th>ambig_cluster</th>\n",
-       "      <th>disambiguated_question</th>\n",
-       "      <th>disambig_cluster</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -262,8 +238,6 @@
        "      <td>Dogs come in a wide range of sizes and breeds....</td>\n",
        "      <td>Are they more vocal when they're hungry or exc...</td>\n",
        "      <td>1</td>\n",
-       "      <td>Are dogs more vocal when dogs are hungry or ex...</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -272,8 +246,6 @@
        "      <td>They are known for their loyalty and companion...</td>\n",
        "      <td>How sensitive are they to environmental changes?</td>\n",
        "      <td>0</td>\n",
-       "      <td>How sensitive are dogs to environmental changes?</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -281,8 +253,6 @@
        "      <td>dogs</td>\n",
        "      <td>They are known for their loyalty and companion...</td>\n",
        "      <td>What kind of enrichment helps them feel more s...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>What kind of enrichment helps dogs feel more s...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -292,8 +262,6 @@
        "      <td>Many families around the world keep them as pe...</td>\n",
        "      <td>How do they show signs of trust toward their c...</td>\n",
        "      <td>2</td>\n",
-       "      <td>How do dogs show signs of trust toward their c...</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -301,8 +269,6 @@
        "      <td>dogs</td>\n",
        "      <td>Many families around the world keep them as pe...</td>\n",
        "      <td>What do they typically do when they feel threa...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>What do dogs typically do when dogs feel threa...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -317,126 +283,65 @@
        "3  OBS004   dogs  Many families around the world keep them as pe...   \n",
        "4  OBS005   dogs  Many families around the world keep them as pe...   \n",
        "\n",
-       "                                            question  ambig_cluster  \\\n",
-       "0  Are they more vocal when they're hungry or exc...              1   \n",
-       "1   How sensitive are they to environmental changes?              0   \n",
-       "2  What kind of enrichment helps them feel more s...              2   \n",
-       "3  How do they show signs of trust toward their c...              2   \n",
-       "4  What do they typically do when they feel threa...              2   \n",
-       "\n",
-       "                              disambiguated_question  disambig_cluster  \n",
-       "0  Are dogs more vocal when dogs are hungry or ex...                 2  \n",
-       "1   How sensitive are dogs to environmental changes?                 2  \n",
-       "2  What kind of enrichment helps dogs feel more s...                 2  \n",
-       "3  How do dogs show signs of trust toward their c...                 2  \n",
-       "4  What do dogs typically do when dogs feel threa...                 2  "
+       "                                            question  ambig_cluster  \n",
+       "0  Are they more vocal when they're hungry or exc...              1  \n",
+       "1   How sensitive are they to environmental changes?              0  \n",
+       "2  What kind of enrichment helps them feel more s...              2  \n",
+       "3  How do they show signs of trust toward their c...              2  \n",
+       "4  What do they typically do when they feel threa...              2  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Cluster ambiguous questions\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# 1. Convert questions to a list\n",
+    "questions = df['question'].tolist()\n",
+    "\n",
+    "# 2. Convert to embeddings using SBERT\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "embeddings = model.encode(questions, show_progress_bar=True)\n",
+    "\n",
+    "# 3. Apply KMeans clustering\n",
+    "# n_clusters arg specifies how many clusters\n",
+    "# random_state ensures reproducible results\n",
+    "kmeans = KMeans(n_clusters=4, random_state=42)\n",
+    "df['ambig_cluster'] = kmeans.fit_predict(embeddings)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "eaa1b500-6ec2-4c0e-a860-08dbfdc87d4e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        ID   animal                                          paragraph  \\\n",
-      "0   OBS001     dogs  Dogs come in a wide range of sizes and breeds....   \n",
-      "1   OBS002     dogs  They are known for their loyalty and companion...   \n",
-      "2   OBS003     dogs  They are known for their loyalty and companion...   \n",
-      "3   OBS004     dogs  Many families around the world keep them as pe...   \n",
-      "4   OBS005     dogs  Many families around the world keep them as pe...   \n",
-      "5   OBS006     cats  Many people adore them for their mysterious be...   \n",
-      "6   OBS007     cats  Many people adore them for their mysterious be...   \n",
-      "7   OBS008     cats  Many people adore them for their mysterious be...   \n",
-      "8   OBS009     cats  Their purring can be quite soothing to humans....   \n",
-      "9   OBS010     cats  They often nap for long hours during the day. ...   \n",
-      "10  OBS011  monkeys  They communicate through vocalizations and ges...   \n",
-      "11  OBS012  monkeys  Monkeys live in forests, mountains, and savann...   \n",
-      "12  OBS013  monkeys  Monkeys live in forests, mountains, and savann...   \n",
-      "13  OBS014  monkeys  Monkeys are playful and curious by nature. Are...   \n",
-      "14  OBS015  monkeys  They live in social groups with hierarchies. M...   \n",
-      "15  OBS016   horses  They are known for their strength and grace. M...   \n",
-      "16  OBS017   horses  They often form strong bonds with their careta...   \n",
-      "17  OBS018   horses  They are known for their strength and grace. H...   \n",
-      "18  OBS019   horses  They are known for their strength and grace. H...   \n",
-      "19  OBS020   horses  Many are used for riding, sports, and therapy....   \n",
-      "\n",
-      "                                             question  ambig_cluster  \\\n",
-      "0   Are they more vocal when they're hungry or exc...              1   \n",
-      "1    How sensitive are they to environmental changes?              0   \n",
-      "2   What kind of enrichment helps them feel more s...              2   \n",
-      "3   How do they show signs of trust toward their c...              2   \n",
-      "4   What do they typically do when they feel threa...              2   \n",
-      "5         Are sudden noises always startling to them?              1   \n",
-      "6         Why do they sometimes follow people around?              3   \n",
-      "7            Why might they pace in new environments?              0   \n",
-      "8        Is pacing a sign of anticipation or anxiety?              0   \n",
-      "9   Do they show preference for certain people ove...              3   \n",
-      "10   What might cause them to vocalize more at night?              1   \n",
-      "11        Why might they isolate themselves at times?              0   \n",
-      "12  Why do they often repeat that behavior in the ...              0   \n",
-      "13  Are they expressing contentment when they stre...              1   \n",
-      "14    Can their posture indicate interest or boredom?              1   \n",
-      "15      Why do they retreat when approached suddenly?              0   \n",
-      "16            Do they rely on routine to feel stable?              1   \n",
-      "17      Are they influenced by others in their group?              3   \n",
-      "18     Do they bond more easily with certain species?              2   \n",
-      "19      Are they more active when alone or in groups?              3   \n",
-      "\n",
-      "                               disambiguated_question  \n",
-      "0   Are dogs more vocal when dogs are hungry or ex...  \n",
-      "1    How sensitive are dogs to environmental changes?  \n",
-      "2   What kind of enrichment helps dogs feel more s...  \n",
-      "3   How do dogs show signs of trust toward their c...  \n",
-      "4   What do dogs typically do when dogs feel threa...  \n",
-      "5         Are sudden noises always startling to cats?  \n",
-      "6         Why do cats sometimes follow people around?  \n",
-      "7            Why might cats pace in new environments?  \n",
-      "8   Is the pacing of cats a sign of anticipation o...  \n",
-      "9   Do cats show preference for certain people ove...  \n",
-      "10  What might cause monkeys to vocalize more at n...  \n",
-      "11     Why might monkeys isolate themselves at times?  \n",
-      "12  Why do monkeys often repeat that behavior in t...  \n",
-      "13  Are monkeys expressing contentment when monkey...  \n",
-      "14  Can the posture of monkeys indicate interest o...  \n",
-      "15    Why do horses retreat when approached suddenly?  \n",
-      "16          Do horses rely on routine to feel stable?  \n",
-      "17  Are horses influenced by other horses in their...  \n",
-      "18   Do horses bond more easily with certain species?  \n",
-      "19    Are horses more active when alone or in groups?  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use APIs to disambiguate clusters\n",
-    "from openai import OpenAI\n",
-    "from dotenv import load_dotenv\n",
-    "from textwrap import dedent\n",
+    "# Load libraries\n",
+    "from openai import OpenAI     # OpenAI client to interact with API\n",
+    "from dotenv import load_dotenv     # Loads .env file (with API key) into Python environment\n",
     "\n",
-    "# Load variables from .env into environment\n",
+    "# Load API key from .env into environment\n",
     "load_dotenv()\n",
     "\n",
-    "# Get API key from environment\n",
+    "# Retrieve API key from environment\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
-    "# Initialize OpenAI client\n",
+    "# Initialize OpenAI client with API key\n",
+    "# Used to send requests to the OpenAI API\n",
     "client = OpenAI(api_key=api_key)\n",
     "\n",
+    "# Stores name of model used for API calls\n",
     "MODEL = \"gpt-4o-mini\"\n",
     "\n",
-    "# System prompt: general-purpose disambiguation\n",
+    "# System prompt: general disambiguation\n",
     "SYSTEM_PROMPT = \"\"\"\n",
     "Rewrite the QUESTION so all ambiguous pronouns or references are replaced \n",
     "with their explicit referents from the CONTEXT. \n",
@@ -461,6 +366,7 @@
     "    }\n",
     "}\n",
     "\n",
+    "# Define function to disambiguate a question\n",
     "def disambiguate_question(context, question):\n",
     "    \"\"\"Call API to rewrite a question using the given context.\"\"\"\n",
     "    prompt = f\"CONTEXT:\\n{context}\\n\\nQUESTION:\\n{question}\"\n",
@@ -473,9 +379,10 @@
     "        response_format=RESPONSE_FORMAT,\n",
     "        temperature=0\n",
     "    )\n",
+    "    # Gets model's reply, converts JSON string to dict, then extracts disambiguated question\n",
     "    return json.loads(resp.choices[0].message.content)[\"disambiguated_question\"]\n",
     "\n",
-    "# Apply function to each row\n",
+    "# Apply function to each row of dataset\n",
     "df[\"disambiguated_question\"] = df.apply(\n",
     "    lambda row: disambiguate_question(row[\"paragraph\"], row[\"question\"]), axis=1\n",
     ")"
@@ -483,48 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "88c26046-bc38-4699-9b3b-f56daaec73ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     Are dogs more vocal when dogs are hungry or ex...\n",
-       "1      How sensitive are dogs to environmental changes?\n",
-       "2     What kind of enrichment helps dogs feel more s...\n",
-       "3     How do dogs show signs of trust toward their c...\n",
-       "4     What do dogs typically do when dogs feel threa...\n",
-       "5           Are sudden noises always startling to cats?\n",
-       "6           Why do cats sometimes follow people around?\n",
-       "7              Why might cats pace in new environments?\n",
-       "8     Is the pacing of cats a sign of anticipation o...\n",
-       "9     Do cats show preference for certain people ove...\n",
-       "10    What might cause monkeys to vocalize more at n...\n",
-       "11       Why might monkeys isolate themselves at times?\n",
-       "12    Why do monkeys often repeat that behavior in t...\n",
-       "13    Are monkeys expressing contentment when monkey...\n",
-       "14    Can the posture of monkeys indicate interest o...\n",
-       "15      Why do horses retreat when approached suddenly?\n",
-       "16            Do horses rely on routine to feel stable?\n",
-       "17    Are horses influenced by other horses in their...\n",
-       "18     Do horses bond more easily with certain species?\n",
-       "19      Are horses more active when alone or in groups?\n",
-       "Name: disambiguated_question, dtype: object"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['disambiguated_question']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "2a372384-e571-414c-99b0-195a8ef975c0",
    "metadata": {},
    "outputs": [
@@ -534,7 +400,7 @@
      "text": [
       "Batches:   0%|                                                                                   | 0/1 [00:00<?, ?it/s]C:\\Users\\irisa\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
       "  return forward_call(*args, **kwargs)\n",
-      "Batches: 100%|███████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  2.15it/s]\n"
+      "Batches: 100%|███████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  3.12it/s]\n"
      ]
     },
     {
@@ -645,7 +511,7 @@
        "4  What do dogs typically do when dogs feel threa...                 2  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +521,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "# 1. Convert disambiguated questions to a list\n",
+    "# 1. Convert disambiguated questions to a list, in order to convert to embeddings\n",
     "dq = df['disambiguated_question'].fillna('').astype(str).tolist()\n",
     "\n",
     "# 2. Convert to embeddings using SBERT\n",
